--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,13 @@
   <body class="bg-emerald-100 p-4 text-gray-800">
     <h1>Worldclass History</h1>
     <main class="container mx-auto">
-      <p>{{ page.introduction }}</p>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 py-5">
         {% for age in page.ages %}
         <div class="map-grid-container">
           <a href="ages/y{{ age.year }}/age/">
             <div class="flex-col w-fll">
               <img
-                src="../../../img/europe{{age.year}}.png"
+                src="img/europe{{age.year}}.png"
                 alt="Map of Europe in {{age.year}}"
               />
             </div>
