--- a/_layouts/age.html
+++ b/_layouts/age.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Worldclass History</title>
-    <link rel="stylesheet" href="../../../assets/main2.css" />
+    <link rel="stylesheet" href="../assets/main2.css" />
   </head>
   <body class="bg-emerald-100">
     <div class="container mx-auto">
