--- a/_layouts/age.html
+++ b/_layouts/age.html
@@ -36,7 +36,7 @@
           {% endfor %}
 
           <img
-            src="../../../img/europe{{page.year}}.png"
+            src="img/europe{{page.year}}.png"
             alt="Map of Europe in {{page.year}}"
             usemap="#europe{{page.year}}"
             class="w-full border-emerald-600 border-5 rounded-xl"
