--- a/_layouts/age.html
+++ b/_layouts/age.html
@@ -27,7 +27,7 @@
             <img
               width="28"
               height="28"
-              src="../../../img/pin.svg"
+              src="../../img/pin.svg"
               class="animate-bounce"
               alt="pin"
             />
