--- a/_layouts/rulers.html
+++ b/_layouts/rulers.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Worldclass History</title>
-    <link rel="stylesheet" href="../../../assets/main2.css" />
+    <link rel="stylesheet" href="../../assets/main2.css" />
   </head>
   <body class="bg-emerald-100 p-4 text-gray-800">
     <!-- Header -->
@@ -24,7 +24,7 @@
         <div class="rulers-container">
           <div class="flex-col self-start">
             <img
-              src="../../../img/rulers/{{page.short}}/{{ ruler.image }}"
+              src="../../img/rulers/{{page.short}}/{{ ruler.image }}"
               alt="{{ ruler.name }}"
               class="w-full h-52 object-cover object-[50%_10%]"
             />
