--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 py-5">
         {% for age in page.ages %}
         <div class="map-grid-container">
-          <a href="ages/y{{ age.year }}/age/">
+          <a href="ages/y{{ age.year }}/age.html">
             <div class="flex-col w-fll">
               <img
                 src="img/europe{{age.year}}.png"
