--- a/_layouts/rulers.html
+++ b/_layouts/rulers.html
@@ -9,7 +9,7 @@
     <title>Worldclass History</title>
     <link rel="stylesheet" href="../../assets/main2.css" />
   </head>
-  <body class="bg-emerald-100 p-4 text-gray-800">
+  <body class="bg-gradient-to-r from-teal-200 to-emerald-100 p-4 text-gray-800">
     <!-- Header -->
     <header class="bg-indigo-600 text-white py-6 rounded-full shadow-lg">
       <h1 class="text-4xl font-bold text-center rounded-full">
