Added alt to svg

--- a/_layouts/age.html
+++ b/_layouts/age.html
@@ -32,6 +32,7 @@
               fill="none"
               viewBox="0 0 15 15"
               class="animate-bounce"
+              alt="pin"
             >
               <path
                 d="M6 6.49606C6 5.66924 6.67183 4.99738 7.5 4.99738C8.32817 4.99738 9 5.66924 9 6.49606C9 7.3229 8.32816 7.99478 7.5 7.99478C6.67184 7.99478 6 7.3229 6 6.49606Z"
